# Icarus-Save-file-Toolkit

./: .gitignore  CLAUDE.md  Icarus Toolkit.sln  README.md  RELEASE_NOTES.md  build_check.bat  claude-setup.sh  create_release.bat  extract_all_icons.py
.claude/: session-start-hook.sh  settings.json
Icarus/: AccoladeData.cs  AccoladesExplorer.cs  BestiaryExplorer.cs  BinaryFlagsExplorer.cs  CharacterExplorer.cs  Core.cs  ExtensionMethods.cs  FlagDefinitions.cs  FogExplorer.cs  GameData.cs  Icarus.csproj  (+6 more)
Icarus Toolkit/: App.axaml  App.axaml.cs  Icarus Toolkit.csproj  Program.cs  ViewLocator.cs
icarus-pets/: .gitignore  .gitlab-ci.yml  NOTICE.md  README.md  bestiary_data.json  breed_data.py  pyproject.toml  talent_data.py  template_data.py  ue4_parser.py  ue4_serializer.py  variation_data.py
icarus-pets/assets/icons/: talent_icon_map.json
icarus-pets/docs/: mount_talent_reference.md  species_swap_research.md
icarus-pets/icarus_pets/: __init__.py  talent_data.py  template_data.py
icarus-pets/scripts/: add_bestiary_to_talent_data.py  check_downloads.py  check_pipeline.py  check_test_changes.py  copy_talent_icons.py  extract_bestiary.py  generate_talent_data.py  generate_variation_data.py  generate_wiki_talents.py  gitlab_upload_janitor.sh  mount-bin.py  pak_extract.py  pak_talent_extract.py  pak_variation_extract.py  phenotype_analysis.py  refresh_talent_data.py  validate_talent_data.py  verify_refresh.py
icarus-pets/tests/: run_all.py  test_refresh.py  test_talent_data.py  test_talent_validation.py  test_ue4_parser.py  test_ue4_serializer.py
(+26 files in other folders)
