[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus-pets"
version = "0.1.0"
description = "Icarus pet/mount game data — talent trees, variations, breeds, bestiary."
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

[tool.setuptools.packages.find]
include = ["icarus_pets*"]

[tool.setuptools.package-data]
icarus_pets = ["bestiary_data.json"]
